--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ theme: hugo-PaperMod
 
 enableRobotsTXT: true
 enableGitInfo: true
-googleAnalytics: UA-26703491-1
+googleAnalytics: G-0YE02LQLLW
 disqusShortname: octavian1001
 
 taxonomies:
