--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -1,9 +1,11 @@
-name: CI
+name: Deploy Hugo site to Pages
 
 # Controls when the workflow will run
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: [ "master" ]
+    branches:
+      - master
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
