--- a/config.yml
+++ b/config.yml
@@ -53,15 +53,26 @@ params:
   env: production
   author: Octavian Hasna
   description: Presentation website with personal projects, research interests, publications and a blog with Romanian posts.
+  keywords: [ blog, portfolio ]
 
-  ShowReadingTime: false
-  ShowShareButtons: false
-  ShowBreadCrumbs: false
-  ShowToc: true
-  comments: false
   defaultTheme: auto
   disableThemeToggle: false
   disableSpecial1stPost: true
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: true
+  tocopen: false
+
+  ShowReadingTime: false
+  ShowShareButtons: false
+  ShowPostNavLinks: false
+  ShowBreadCrumbs: false
+  ShowCodeCopyButtons: false
+  ShowWordCount: false
+  ShowRssButtonInSectionTermList: true
+  UseHugoToc: true
 
   assets:
     favicon: /favicon.ico
